--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "node test/auth.test.js",
     "frontend:start": "cd ../frontend && npm start",
     "frontend:dev": "cd ../frontend && npm run dev",
-    "full:dev": "concurrently \"npm run dev\" \"npm run frontend:dev\""
+    "full:dev": "concurrently \"npm run dev\" \"npm run frontend:dev\"",
+    "seed:questions": "ts-node scripts/createDomainCollections.ts",
+    "manage:collections": "ts-node scripts/manageDomainCollections.ts"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -20,8 +25,15 @@
     "mongoose": "^8.18.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.11",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "keywords": [
     "mongodb",
