--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ coverage/
 .idea/
 npm-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.npm-debug.log*
 /.turbo/
 .DS_Store
 *.pem
@@ -41,7 +41,7 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+
 
 # Local env files
 .env*.local
